objects/ssot__GiftTransaction__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AcknowledgementDate__c</fullName>
        <label>Acknowledgement Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__AcknowledgementStatus__c</fullName>
        <label>Acknowledgement Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AdvancementType__c</fullName>
        <label>Advancement Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CampaignId__c</fullName>
        <label>Campaign</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CheckDate__c</fullName>
        <label>Check Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ContactId__c</fullName>
        <label>Contact Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CurrentAmount__c</fullName>
        <label>Current Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DonorCoverAmount__c</fullName>
        <label>Donor Cover Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DonorId__c</fullName>
        <label>Donor</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GatewayReference__c</fullName>
        <label>Gateway Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GatewayTransactionFeeAmount__c</fullName>
        <label>Gateway Transaction Fee</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__GenerationalCohort__c</fullName>
        <label>Generational Cohort</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GiftCommitmentId__c</fullName>
        <label>Gift Commitment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GiftTransactionStatus__c</fullName>
        <label>Gift Transaction Status</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GiftType__c</fullName>
        <label>Gift Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GraduationAchievement__c</fullName>
        <label>Graduation Achievement</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GraduationCohort__c</fullName>
        <label>Graduation Cohort</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Gift Transaction Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsFullyRefunded__c</fullName>
        <label>Is Fully Refunded</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsPaid__c</fullName>
        <label>Is Paid</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsPartiallyRefunded__c</fullName>
        <label>Is Partially Refunded</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsWrittenOff__c</fullName>
        <label>Is Written Off</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastGatewayErrorMessage__c</fullName>
        <label>Last Gateway Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastGatewayProcessedDate__c</fullName>
        <label>Last Gateway Processed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LastGatewayResponseCode__c</fullName>
        <label>Last Gateway Response Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MatchingEmployerTransactionId__c</fullName>
        <label>Matching Employer Transaction</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NonTaxDeductibleAmount__c</fullName>
        <label>Non Tax Deductible Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OriginalAmount__c</fullName>
        <label>Original Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutreachSourceCodeId__c</fullName>
        <label>Outreach Source Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentIdentifier__c</fullName>
        <label>Payment Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentInstrumentId__c</fullName>
        <label>Payment Instrument</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentMethodId__c</fullName>
        <label>Payment Method</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProcessorReference__c</fullName>
        <label>Processor Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProcessorTransactionFeeAmount__c</fullName>
        <label>Processor Transaction Fee</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RefundedAmount__c</fullName>
        <label>Refunded Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TaxDeductionAmount__c</fullName>
        <label>Tax Deduction</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TaxReceiptStatus__c</fullName>
        <label>Tax Receipt Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalTransactionFeeAmount__c</fullName>
        <label>Total Transaction Fee</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TransactionDate__c</fullName>
        <label>Transaction Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761240110_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GiftTransaction_CampaignId_map_Campa_rel</label>
        <referenceTo>ssot__Campaign__dlm</referenceTo>
        <relationshipLabel>GiftTransaction_CampaignId_map_Campa_rel</relationshipLabel>
        <relationshipName>rel_1697761240110_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761240181_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GiftTransaction_DonorId_map_Account__rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>GiftTransaction_DonorId_map_Account__rel</relationshipLabel>
        <relationshipName>rel_1697761240181_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761240244_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GiftTransaction_GiftCommitmentId_map_rel</label>
        <referenceTo>ssot__GiftCommitment__dlm</referenceTo>
        <relationshipLabel>GiftTransaction_GiftCommitmentId_map_rel</relationshipLabel>
        <relationshipName>rel_1697761240244_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>